# ChangeLog for net-misc/italc
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/italc/ChangeLog,v 1.24 2011/02/28 18:02:57 ssuominen Exp $

*italc-1.0.13 (01 Feb 2012)

  01 Feb 2012; Dmitry 'daks' Fomenko <daks12@gmail.com> +italc-1.0.13.ebuild,
  -italc-1.0.9.ebuild, -files/italc-1.0.9-as-needed.patch,
  -files/italc-1.0.9-gcc44.patch, -files/italc-1.0.9-gcc45.patch:
  Bump version. Purged old, non-working version.

  28 Feb 2011; Samuli Suominen <ssuominen@gentoo.org> italc-1.0.9.ebuild:
  Use virtual/jpeg.

  22 Jun 2010; Markos Chandras <hwoarang@gentoo.org> italc-1.0.9.ebuild,
  +files/italc-1.0.9-gcc45.patch:
  Fix gcc-4.5 build failures wrt bug #322523

  09 Mar 2010; Jonathan Callen <abcd@gentoo.org> italc-1.0.9.ebuild:
  QA: When not using an absolute path, you MUST NOT use a file extension
  (.png, .svg, or .xpm) on the icon name for make_desktop_entry (fix usage
  in comment)

  10 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
  -files/italc-1.0.3-fpic-asneeded.patch:
  clean up

  10 Nov 2009; Christian Faulhammer <fauli@gentoo.org> italc-1.0.9.ebuild,
  +files/italc-1.0.9-as-needed.patch:
  fix as-needed issues, bug 269843, patch by Kacper Kowalik <xarthisius DOT
  kk AT gmail DOT com>

  10 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
  -italc-1.0.3-r1.ebuild:
  clean up

  30 Jul 2009; Samuli Suominen <ssuominen@gentoo.org> italc-1.0.9.ebuild,
  +files/italc-1.0.9-gcc44.patch:
  Fix building with GCC 4.4 wrt #278462.

  08 Jun 2009; Rémi Cardona <remi@gentoo.org> italc-1.0.3-r1.ebuild,
  italc-1.0.9.ebuild:
  pkgmove xinput from x11-misc/ to x11-apps/

  24 May 2009; Markus Meier <maekke@gentoo.org> italc-1.0.9.ebuild:
  x86 stable, bug #269843

  18 May 2009; Thomas Anderson <gentoofan23@gentoo.org> italc-1.0.9.ebuild:
  stable amd64, bug 269843

*italc-1.0.9 (31 Jan 2009)

  31 Jan 2009; <jokey@gentoo.org> +files/italc-1.0.9-qt4-libpath.patch,