@@ -2,6 +2,9 @@ AUX italc-1.0.9-qt4-libpath.patch 579 RMD160 7b2c919b98f155044bf8ce9aaf5f32e9e2d
 AUX italc-1.0.9-strip.patch 409 RMD160 82d89f6884d091bccf31e4ac61d1cb85072b3cff SHA1 0799fb9b6752476218b129f4d4928f2d4a54c024 SHA256 a9111a731b48bf2522d2ef82ee528162de6e75f774cd847f4a4ca59d1255679a
 AUX italc-1.0.9-system-libvncserver.patch 1921 RMD160 fd01a3a8174dbc669749bf9595cdabd0cf1740d5 SHA1 86ff97c200befe591ccfa42f760d978d5429d753 SHA256 2489cb125c29ac163e088da10225f60318adc4a52a9dd924be45819550477fa9
 DIST italc-1.0.13.tar.bz2 3323435 RMD160 aa35d26b908264c47a6c2d90cd5a72a1583fd765 SHA1 c5f83e3d7f4b9ab5ff4dac9d4745f47daffa9635 SHA256 e0a9d9f9171dc893369acaa1f083ee5873db6ccf7376087075b80dc55cf21fda
+DIST italc-2.0.0.tar.bz2 3413075 RMD160 be43ba4a90cd7c68917d8f61ba6edd18286a44f5 SHA1 a5aa531beddc24512a8818f285c07781bc9e4e47 SHA256 edb5e0502ad73e3398f63e2f485fa7ca7d12cae50315801ac3f22304ccdb6aac
+EBUILD italc-1.0.13-r1.ebuild 2717 RMD160 4b60e05976d435ebb357690ba8611f21dbd69005 SHA1 f06b258c54fac4df89d4e40094d87ab5f5dea258 SHA256 d78b583eaba7175341f225cc7ea2e6d58a87bb121529ffb197fda08c80c66314
 EBUILD italc-1.0.13.ebuild 2718 RMD160 45e45c388223984b0223e3fafc5c8b474dd3bb00 SHA1 e3c713c0c82a95c60849429faa9c76384e82fa56 SHA256 586f2daa70c17881945db1d8e6eafab06cc54a90c498450784a8fa91210860a4
-MISC ChangeLog 4109 RMD160 09409a20a9ac4d8d9215160bdc85c52676c1f6c6 SHA1 9aee33b314574fe18540947c84383dda9824d99e SHA256 5829ba5e45ed8f12d0404637681ae001c3d31a8b5d32211dcb29ae366b77df11
-MISC metadata.xml 349 RMD160 376cf37e3155a38e765a116ef6696fd8f54a0aca SHA1 693e52c63172020f732f26acffcdf3bbb9e10f4f SHA256 17e242cc132cf1fec5d4b3def49bc1e92c77d9b802bb43a478069617ced0f6ae
+EBUILD italc-2.0.0.ebuild 2010 RMD160 0f680362b27fc1400631a4966c30b751410cb515 SHA1 468bcee9c231f8bcb94a0abdad0bdeed3e3d6ba9 SHA256 3d9a95669aef904449abb970a3c64c958afd1223b45a1541d72faec6fd07c218
+MISC ChangeLog 4217 RMD160 2c68672bebcb577d88a330a0034eb97eda73ea72 SHA1 9ead4e58c861e214aac7ffcfc94c3191cb272c8a SHA256 391544742f78c6c09b39ec5e82f7aaccb49cbbffda8fcd41dd5399fbe447cb85
+MISC metadata.xml 373 RMD160 c302b060b9019ed0163921ee5d6d057115fafc26 SHA1 c0b213fe1e114a3ce5904a8e1b026d34e2054521 SHA256 c767fa8f590fa9aff7426d1472126acd927ba46cbedc72178e2f4d85667ea498
