@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<maintainer>
+	 <herd>no-herd</herd>
+	 <maintainer>
 		<email>daks12@gmail.com</email>
 		<name>Dmitry 'daks' Fomenko</name>
 	</maintainer>
