@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/italc
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/italc/ChangeLog,v 1.24 2011/02/28 18:02:57 ssuominen Exp $
+# $Header: $
+
+*italk-2.0.0, italk-1.0.13-r1 (11 Feb 2012)
+
+  11 Feb 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>
+  +italk-2.0.0.ebuild, +italk-1.0.13-r1.ebuild:
+  Version bump. Added desktop entry for 1.0.13.
 
 *italc-1.0.13 (01 Feb 2012)
 
